--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Mountainside Lifestyle</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <script src="main.js"></script> 
 </head>
 <body>
-    
+    <div class='header'>
+    <image src="file:///C:/Users/rowst/OneDrive/Desktop/Mountainside%20Lifestyle/Mountainside%20Lifestyle%20Logo.png"
+    alt="Mountainside Lifestyle Logo" width="100" height="100"/>
+    </div>
 </body>
 </html>
