--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class='header'>
-    <image src="file:///C:/Users/rowst/OneDrive/Desktop/Mountainside%20Lifestyle/Mountainside%20Lifestyle%20Logo.png"
+    <image src="file:///C:/Users/rowst/MountainsideLifestyle/Mountainside%20Lifestyle%20Logo.png"
     alt="Mountainside Lifestyle Logo" width="100" height="100"/>
     </div>
 </body>
