--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
 <body>
     <div class='header'>
     <image src="file:///C:/Users/rowst/MountainsideLifestyle/Mountainside%20Lifestyle%20Logo.png"
-    alt="Mountainside Lifestyle Logo" width="100" height="100"/>
+    alt="Mountainside Lifestyle Logo" width="90" height="90"/>
+    </div>
+    <div class="topnav">
+        <a class="active" href="#home">Category 1</a>
+        <a href="#Category 2">Category 2</a>
+        <a href="#Category 3">Category 3</a>
+        <a href="#Category 4">Category 4</a>
     </div>
 </body>
 </html>
