--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
     <link rel="shortcut icon" type="image/png" href="http://example.com/favicon.png"/>
 </head>
 <body>
+    <!-- header code -->
     <div class='header'>
-    <image src="file:///C:/Users/rowst/MountainsideLifestyle/Mountainside%20Lifestyle%20Logo.png"
-    alt="Mountainside Lifestyle Logo" width="90" height="90"/>
-    </div>
+    <a href="">
+        <image src="file:///C:/Users/rowst/MountainsideLifestyle/Mountainside%20Lifestyle%20Logo.png"
+        alt="Mountainside Lifestyle Logo" width="90" height="90"/>
+    </a>
+    <!--navigational bar code-->
     <div class="topnav">
-        <a class="active" href="#home">Category 1</a>
+        <a href="#Category 1">Category 1</a>
         <a href="#Category 2">Category 2</a>
         <a href="#Category 3">Category 3</a>
         <a href="#Category 4">Category 4</a>
